--- a/UI/fairness-lens/src/RepairDatasetPage.css
+++ b/UI/fairness-lens/src/RepairDatasetPage.css
@@ -43,3 +43,31 @@
     background-color: #0056b3;
   }
   
+  .images-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .images-grid img {
+    max-width: 100%;
+    height: auto;
+    margin: 5px;
+    cursor: pointer;
+  }
+  
+  .images-grid img.selected {
+    border: 5px solid rgb(255, 100, 100);
+  }
+  
+  .submit-button {
+    margin-top: 10px;
+    padding: 8px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
