--- a/UI/fairness-lens/src/RepairDatasetDetails.css
+++ b/UI/fairness-lens/src/RepairDatasetDetails.css
@@ -25,6 +25,28 @@
   .find-mups-button {
     /* Add your button styles here */
   }
+
+  .options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  /* Style for the select drop-downs */
+  label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  select {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+    margin-bottom: 10px;
+  }
   
   .center-content {
     display: flex;
