--- a/UI/fairness-lens/src/DatasetSelector.css
+++ b/UI/fairness-lens/src/DatasetSelector.css
@@ -1,115 +1,129 @@
 /* DatasetSelector.css */
 
 .load-dataset-page {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
+    /*max-width: 1000px;*/
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
 }
 
 .dataset-selector {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f7f7f7;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center; /* Center content */
+    /*max-width: 1000px;*/
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    text-align: center; /* Center content */
+}
+.select-dataset-options {
+
 }
 
 h1 {
-  font-size: 24px;
-  color: #333;
+    font-size: 24px;
+    color: #333;
 }
 
 .error-message {
-  color: #ff0000;
+    color: #ff0000;
 }
 
 .selected-dataset {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  text-align: center; /* Align text to the left */
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    text-align: center; /* Align text to the left */
 }
 
-ul {
-  list-style: none;
-  padding: 0;
+.selected-dataset ul {
+    list-style: none;
+    padding: 0;
 }
 
-ul li {
-  margin-bottom: 10px;
+.selected-dataset ul li {
+    margin-bottom: 10px;
+    background-color: #f7f7f7;
+    border-radius: 8px;
+
+}
+
+.attribute-card {
+    padding: 5px;
+}
+
+.attribute-card pre {
+    white-space: break-spaces;
 }
 
 form {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
-form div {
-  margin-bottom: 15px;
-  text-align: left; /* Align labels and inputs to the left */
+.sample-form-input-div {
+    margin-bottom: 15px;
+    text-align: left; /* Align labels and inputs to the left */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+    white-space: nowrap;
 }
 
 label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    /*font-weight: bold;*/
 }
 
 input {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 button {
-  background-color: #4caf50;
-  color: #fff;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 button:hover {
-  background-color: #45a049;
+    background-color: #45a049;
 }
 
 .dataset-created {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #ebebeb;
-  color: #000000;
-  border-radius: 8px;
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #ebebeb;
+    color: #000000;
+    border-radius: 8px;
 }
 
 .dataset-id-box {
-  padding: 8px;
-  background-color: #4caf50;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 10px;
+    padding: 8px;
+    background-color: #4caf50;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 .dataset-id-box:hover {
-  background-color: #f0f0f0;
+    background-color: #f0f0f0;
 }
 
 .dataset-created button {
-  margin-top: 10px;
-  background-color: #fff;
-  color: #4caf50;
-  border: 1px solid #4caf50;
+    margin-top: 10px;
+    background-color: #fff;
+    color: #4caf50;
 }
 
 .dataset-created button:hover {
-  background-color: #4caf50;
-  color: #fff;
+    background-color: #4caf50;
+    color: #fff;
 }
