--- a/UI/fairness-lens/src/LoadDatasetDetails.css
+++ b/UI/fairness-lens/src/LoadDatasetDetails.css
@@ -2,90 +2,115 @@
 
 /* Overall styling for the component */
 div {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f7f7f7;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.title {
+    background-color: white;
+    display: flex; /* Make parent container a flexbox */
+    align-items: center; /* Align content vertically */
+    justify-content: center;
+    gap: 10px;
+    padding: 0px;
+}
+
+.title pre {
+    font-size: xx-large;
+    background-color: #f7f7f7;
+    border-radius: 7px;
 }
 
 /* Header style */
 h2 {
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 /* Filter section styling */
 .filters {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 20px;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    background-color: white;
+    margin-top: 20px;
 }
 
 /* Individual filter styling */
 .filters div {
-  flex-basis: calc(25% - 20px);
+    flex-basis: calc(25% - 20px);
+
 }
 
 /* Label styling */
 label {
-  font-size: 16px;
-  color: #555;
-  margin-bottom: 5px;
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 5px;
 }
 
 /* Dropdown styling */
 select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 /* Pagination section styling */
 .pagination {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color: white;
 }
 
 /* Gallery styling */
 .gallery {
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  gap: 10px;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 10px;
+    background-color: white;
+    border-radius: 8px;
 }
 
 /* Image styling */
 .image {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 /* Repair button styling */
 .repair {
-  margin-top: 20px;
+    margin-top: 20px;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .repair-button {
-  display: inline-block;
-  background-color: #4caf50;
-  color: #fff;
-  padding: 15px 30px;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: background-color 0.3s ease;
+    display: inline-block;
+    background-color: #4caf50;
+    color: #fff;
+    padding: 15px 30px;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
 }
 
 .repair-button:hover {
-  background-color: #45a049;
+    background-color: #45a049;
 }
